dynamic-configuration/eds-filesystem/front-envoy.yaml
node:
  id: envoy_front_proxy
  cluster: candy_Cluster

admin:
  profile_path: /tmp/envoy.prof
  access_log_path: /tmp/admin_access.log
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9901

static_resources:
  listeners:
    - name: listener_0
      address:
        socket_address: { address: 0.0.0.0, port_value: 80 }
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: ingress_http
                codec_type: AUTO
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: web_service_01
                      domains: ["*"]
                      routes:
                        - match: { prefix: "/" }
                          route: { cluster: webcluster }
                http_filters:
                  - name: envoy.filters.http.router

  clusters:
    - name: webcluster
      connect_timeout: 0.25s
      type: EDS
      lb_policy: ROUND_ROBIN
      eds_cluster_config:
        service_name: webcluster
        eds_config:
          path: '/etc/envoy/eds.conf.d/eds.yaml'
